--- a/troubleshoot.adoc
+++ b/troubleshoot.adoc
@@ -17,6 +17,8 @@ summary: You can configure ONTAP SAN host settings for the VMware vSphere 8.x re
 [.lead]
 Before troubleshooting any NVMe-oF failures, verify that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
 
+// Before troubleshooting any NVMe-oF failures for RHEL, OL, and SLES hosts, verify that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
+
 == Enable verbose logging
 
 If you have an issue with your configuration, verbose logging can provide essential information for troubleshooting.
@@ -27,8 +29,6 @@ The procedure to set verbose logging for Qlogic (Qla2xxx) is different from the 
 ====
 
 .LPFC
-
-Set the lpfc driver for NVMe/FC.
 
 --
 
