--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -88,7 +88,7 @@ sanlun version
 sanlun version 7.1.386.1644
 ----
 
-== Recommended driver with Linux kernel
+== Recommended driver settings with Linux kernel
 
 When you configure an FC environment that uses native inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. 
 
