--- a/hu_centos_70.adoc
+++ b/hu_centos_70.adoc
@@ -126,5 +126,5 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
-There are no known issues for CentOS 7.0.
+There are no known issues for the CentOS 7.0 with ONTAP release.
 
