--- a/nvme_rhel_95.adoc
+++ b/nvme_rhel_95.adoc
@@ -167,7 +167,9 @@ cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 0x100000109bf044b2
 ----
 
-.. `cat /sys/class/fc_host/host*/port_state`
+. Verify that your initiator ports are online:
++
+`cat /sys/class/fc_host/host*/port_state`
 +
 ----
 Online
