--- a/nvme_rhel_95.adoc
+++ b/nvme_rhel_95.adoc
@@ -176,7 +176,9 @@ Online
 Online
 ----
 
-.. `cat /sys/class/scsi_host/host*/nvme_info`
+. Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
++
+`cat /sys/class/scsi_host/host*/nvme_info`
 +
 .Show example
 [%collapsible]
