--- a/hu_ol_94.adoc
+++ b/hu_ol_94.adoc
@@ -20,7 +20,7 @@ You can use the ONTAP SAN host configuration settings to configure Oracle Linux 
 
 include::_include/hu/reuse_hu_installing_luhu_without32.adoc[]
 
-== Use SAN Toolkit
+== Use the SAN Toolkit
 
 The toolkit is installed automatically when you install the NetApp Host Utilities package. This kit provides the `sanlun` utility, which helps you manage LUNs and host bus adapters (HBAs). The `sanlun` command returns information about the LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
 
@@ -28,7 +28,7 @@ In the following example, the `sanlun lun show` command returns LUN information.
 ----
 sanlun lun show all
 ----
-.Show example output
+.Show example
 [%collapsible]
 ====
 ----
@@ -61,7 +61,7 @@ The following sections provide sample multipath output for a LUN mapped to All S
 
 include::_include/hu/reuse_hu_asa_configuration.adoc[]
 
-.Show example output
+.Show example
 [%collapsible]
 ====
 ----
@@ -80,7 +80,7 @@ NOTE: A single LUN shouldn't require more than four paths. Having more than four
 
 include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
 
-.Show example output
+.Show example
 [%collapsible]
 ====
 ----
@@ -103,7 +103,7 @@ include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
 
 The Oracle Linux 9.4 OS recognizes ONTAP LUNs and automatically sets all configuration parameters correctly for both ASA and non-ASA configurations. You can further optimize performance for your host configuration with the following recommended settings.
 
-include::_include/hu/reuse_hu_recommended_settings.adoc[]
+include::_include\hu\reuse-hu-systemctl-multipathd.adoc[]
 
 
 [cols=2*,options="header"]
@@ -123,7 +123,7 @@ include::_include/hu/reuse_hu_recommended_settings.adoc[]
 | path_selector | service-time 0
 | polling_interval | 5
 | prio | ontap
-| product | LUN.*
+| product | LUN
 | retain_attached_hw_handler | yes
 | rr_weight | uniform
 | user_friendly_names | no
@@ -134,7 +134,7 @@ include::_include/hu/reuse_hu_recommended_settings.adoc[]
 
 The following example demonstrates how to correct an overridden default. In this case, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that are not compatible with ONTAP LUNs. If they cannot be removed because other SAN arrays are still attached to the host, these parameters can be corrected specifically for ONTAP LUNs with a device stanza.
 
-.Show example output
+.Show example
 [%collapsible]
 ====
 ----
@@ -145,7 +145,7 @@ defaults {
 devices {
  device {
  vendor "NETAPP "
- product "LUN.*"
+ product "LUN"
  no_path_retry queue
  path_checker tur
  }
