--- a/hu_sles_15SP6.adoc
+++ b/hu_sles_15SP6.adoc
@@ -13,7 +13,7 @@ summary: Describes how to use SUSE Linux Enterprise Server 15 SP6 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can use the ONTAP SAN host configuration settings to configure SUSE Linux Enterprise Server 15 SP6 with FCP or iSCSI for ONTAP storage.   
+You can use the ONTAP SAN host configuration settings to configure SUSE Linux Enterprise Server 15 SP6 with FCP or iSCSI for operation with ONTAP storage.   
 
 == Install the Linux Unified Host Utilities
 
@@ -26,12 +26,7 @@ NetApp strongly recommends installing the Linux Unified Host Utilities. The Host
 The SAN Toolkit software is automatically installed with the Linux Host Utilities.
 
 == Enable SAN booting
-If it is supported by your SAN configuration, you should configure your host to use SAN booting to simplify deployment and improve scalability.
-
-.Before you begin
-Use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=84067;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware, HBA boot BIOS, and the ONTAP versionssupport SAN booting.
-
-include::_include/hu/reuse_hu_san_booting_steps.adoc[]
+include::_include/hu/reuse_hu_san_booting.adoc[]
 
 == Multipathing
 
@@ -40,69 +35,6 @@ You can use multipathing with SUSE Linux Enterprise Server 15 SP6 to manage ONTA
 To use multipathing, the `/etc/multipath.conf file` must exist. If the `/etc/multipath.conf` file doesn't exist, you can create an empty, zero-byte file by using the `touch /etc/multipath.conf` command. You don't need to make changes to the `/etc/multipath.conf` zero-byte file because SUSE Linux Enterprise Server 15 SP6 is compiled with the settings (default settings) required to recognize and correctly manage ONTAP LUNs. 
 
 SUSE Linux Enterprise Server 15 SP6 also configures the parameters for all SAN Array (ASA) and non-ASA configurations.
-
-=== Use multipathing to optimize performance
-
-You can use the `multipath.conf` file with the recommended settings for ONTAP LUNs to optimize the performance of your host configuration: 
-
-* You can exclude devices from multipath by adding them to a blacklist.
-* You can restore default settings for ONTAP LUNs.
-
-.Blacklist devices
-
-If you have a device that you don’t want multipath to manage, you can exclude it by adding the WWID for the unwanted device to the blacklist for the `multipath.conf` file using the following command syntax:
-
-----
-blacklist {
-        wwid <DevId>
-        devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
-        devnode "^hd[a-z]"
-        devnode "^cciss.*"
-}
-----
-
-The following example shows how to determine a WWID and add it to a blacklist.
-
-.	Determine the WWID:
-+
-`# /lib/udev/scsi_id -gud /dev/sda`
-+
-`360030057024d0730239134810c0cb833`
-+
-"sda" is the local SCSI disk that you want to add it to the blacklist.
-
-.	Add the WWID to the blacklist stanza in `/etc/multipath.conf`:
-+
-----
-blacklist {
-	     wwid   360030057024d0730239134810c0cb833
-        devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
-        devnode "^hd[a-z]"
-        devnode "^cciss.*"
-}
-----
-
-[[restore-default-setting]]
-.Restore default settings for ONTAP LUNs
-The recommended settings are required to support correct operation of ONTAP LUNs. You should always check your `/etc/multipath.conf` file, especially in the defaults section, for legacy settings that might be overriding the recommended settings. For example, a host can override default settings for ONTAP LUNs when it's connected to LUNs from other vendors. You can restore the recommended settings for ONTAP LUNs by adding a device stanza to the `/etc/multipath.conf` file.
-
-The following example shows a `multipath.conf` file that defines values for path_checker and no_path_retry (readsector0 and fail) that aren't compatible with ONTAP LUNs. When SAN arrays are attached to the host, you can correct the values for path_checker and no_path_retry to the recommended values, "queue" and "tur", by adding a device stanza to the `multipath.conf` file that applies specifically to ONTAP LUNs:
-
-----
-defaults {
-   path_checker      readsector0
-   no_path_retry     fail
-}
-
-devices {
-   device {
-      vendor         "NETAPP"
-      product         "LUN"
-      no_path_retry    queue
-      path_checker     tur
-   }
-}
-----
 
 === Configure multipathing
 
@@ -148,6 +80,70 @@ The following table shows the critical multipathd parameters for ONTAP LUNs and 
 |===
 +
 If required, <<restore-default-setting, restore a default setting for an ONTAP LUN>>.
+
+=== Use multipathing to optimize performance
+
+You can use the `multipath.conf` file with the recommended settings for ONTAP LUNs to optimize the performance of your host configuration: 
+
+* You can exclude devices from multipath by adding them to a blacklist.
+* You can restore default settings for ONTAP LUNs.
+
+==== Blacklist devices
+
+If you want to exclude a device from multipath, you can add the WWID for the unwanted device to the blacklist for the `multipath.conf` file using the following device stanza:
+
+----
+blacklist {
+        wwid <DevId>
+        devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
+        devnode "^hd[a-z]"
+        devnode "^cciss.*"
+}
+----
+
+The following example determines a WWID and adds it to a blacklist.
+
+.Steps
+.	Determine the WWID:
++
+`# /lib/udev/scsi_id -gud /dev/sda`
++
+`360030057024d0730239134810c0cb833`
++
+"sda" is the local SCSI disk that you want to add it to the blacklist.
+
+.	Add the WWID to the blacklist stanza in `/etc/multipath.conf`:
++
+----
+blacklist {
+	     wwid   360030057024d0730239134810c0cb833
+        devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
+        devnode "^hd[a-z]"
+        devnode "^cciss.*"
+}
+----
+
+[[restore-default-setting]]
+==== Restore default settings for ONTAP LUNs
+The recommended settings are required to support correct operation of ONTAP LUNs. You should always check your `/etc/multipath.conf` file, especially in the defaults section, for legacy settings that might be overriding the recommended settings. For example, a host can override default settings for ONTAP LUNs when it's connected to LUNs from other vendors. You can restore the recommended settings for ONTAP LUNs by adding a device stanza to the `/etc/multipath.conf` file.
+
+The following example shows a `multipath.conf` file that defines values for path_checker and no_path_retry (readsector0 and fail) that aren't compatible with ONTAP LUNs. When SAN arrays are attached to the host, you can correct the values for path_checker and no_path_retry to the recommended values, "queue" and "tur", by adding a device stanza to the `multipath.conf` file that applies specifically to ONTAP LUNs:
+
+----
+defaults {
+   path_checker      readsector0
+   no_path_retry     fail
+}
+
+devices {
+   device {
+      vendor         "NETAPP"
+      product         "LUN"
+      no_path_retry    queue
+      path_checker     tur
+   }
+}
+----
 
 === Examples of all ASA and non-ASA configurations
 In ASA and non-ASA configurations, a single ONTAP LUN shouldn't require more than four paths. If there are more than four paths, it might cause issues with the paths during a storage failure.
