--- a/hu-rl-91.adoc
+++ b/hu-rl-91.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu-rl-91.html
 keywords: host utilities, rocky, linux, 9.1, netapp, ontap, fcp, iscsi
-summary: Describes how to use Rocky Linux 9.1 with FCP and iSCSI for ONTAP storage
+summary: Install the Linux Host Utilities on a Rocky Linux 9.1 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Rocky Linux 9.1 with FCP and iSCSI for ONTAP storage
 :hardbreaks:
@@ -13,3 +13,33 @@ summary: Describes how to use Rocky Linux 9.1 with FCP and iSCSI for ONTAP stora
 :imagesdir: ./media/
 
 [.lead]
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Rocky Linux 9.1 host, you can use the Host Utilities to support managing FCP and iSCSI protocol operations with ONTAP LUNs.
+
+include::_include/hu/install-linux-host-utilities.adoc[]
+
+== Step 2: Confirm the multipath configuration for your host
+
+You can use multipathing with Rocky Linux 9.1 to manage ONTAP LUNs.
+
+include::_include/hu/rhel-multipathing.adoc[]
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/enable-san-boot-linux.adoc[]
+
+include::_include/hu/exclude-device.adoc[]
+
+include::_include/hu/rhel-customize-parameters.adoc[]
+
+include::_include/hu/hu-asm-mirroring.adoc[]
+
+== Known issues
+
+The RHEL 9.1 with ONTAP release has the following known issues:
+
+[options="header", cols="20,40,40"]
+|===
+|NetApp Bug ID	|Title	|Description
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1508554[1508554^]  	|NetApp Linux Host Utilities CLI requires additional library package dependencies to support Emulex HBA adapter discovery	|In RHEL 9.1, the NetApp Linux SAN Host Utilities CLI `sanlun fcp show adapter -v` fails because the library package dependencies to support HBA discovery cannot be found. 
+
+|===
