--- a/hu-rl-93.adoc
+++ b/hu-rl-93.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu-rl-93.html
 keywords: host utilities, rocky, linux, 9.3, netapp, ontap, fcp, iscsi
-summary: Describes how to use Rocky Linux 9.3 with FCP and iSCSI for ONTAP storage
+summary: Install the Linux Host Utilities on a Rocky Linux 9.3 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Rocky Linux 9.3 with FCP and iSCSI for ONTAP storage
 :hardbreaks:
@@ -13,3 +13,34 @@ summary: Describes how to use Rocky Linux 9.3 with FCP and iSCSI for ONTAP stora
 :imagesdir: ./media/
 
 [.lead]
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Rocky Linux 9.3 host, you can use the Host Utilities to support managing FCP and iSCSI protocol operations with ONTAP LUNs.
+
+include::_include/hu/install-linux-host-utilities.adoc[]
+
+== Step 2: Confirm the multipath configuration for your host
+
+You can use multipathing with Rocky Linux 9.3 to manage ONTAP LUNs.
+
+include::_include/hu/rhel-multipathing.adoc[]
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/enable-san-boot-linux.adoc[]
+
+include::_include/hu/exclude-device.adoc[]
+
+include::_include/hu/rhel-customize-parameters.adoc[]
+
+include::_include/hu/hu-asm-mirroring.adoc[]
+
+== Known issues
+
+The RHEL 9.3 with ONTAP release has the following known issues:
+
+[options="header", cols="20, 20, 50,20"]
+|===
+|NetApp Bug ID	|Title	|Description	|JIRA ID
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1508554[1508554^]  	|NetApp Linux Host Utilities CLI requires additional library package dependencies to support Emulex host bus adapter (HBA) adapter discovery	|In RHEL 9.x, the NetApp Linux SAN Host Utilities CLI `sanlun fcp show adapter -v` fails because the library package dependencies to support Emulex host bus adapter (HBA) discovery cannot be found. |Not applicable
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1593771[1593771^]  	|A Red Hat Enterprise Linux 9.3 QLogic SAN host encounters loss of partial multipaths during storage mobility operations	| During the ONTAP storage controller takeover operation, half of the multipaths are expected to go down or switch to a failover mode and then recover to full path count during the giveback workflow. However, with a Red Hat Enterprise Linux (RHEL) 9.3 QLogic host, only partial multipaths are recovered after a storage failover giveback operation. |RHEL 17811
+|===
+
