--- a/hu-rl-94.adoc
+++ b/hu-rl-94.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu-rl-94.html
 keywords: host utilities, rocky, linux, 9.4, netapp, ontap, fcp, iscsi
-summary: Describes how to use Rocky Linux 9.4 with FCP and iSCSI for ONTAP storage
+summary: Install the Linux Host Utilities on a Rocky Linux 9.4 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure Rocky Linux 9.4 with FCP and iSCSI for ONTAP storage
 :hardbreaks:
@@ -13,3 +13,27 @@ summary: Describes how to use Rocky Linux 9.4 with FCP and iSCSI for ONTAP stora
 :imagesdir: ./media/
 
 [.lead]
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Rocky Linux 9.4 host, you can use the Host Utilities to support managing FCP and iSCSI protocol operations with ONTAP LUNs.
+
+include::_include/hu/install-linux-host-utilities.adoc[]
+
+== Step 2: Confirm the multipath configuration for your host
+
+You can use multipathing with Rocky Linux 9.4 to manage ONTAP LUNs.
+
+include::_include/hu/rhel-multipathing.adoc[]
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/enable-san-boot-linux.adoc[]
+
+include::_include/hu/exclude-device.adoc[]
+
+include::_include/hu/rhel-customize-parameters.adoc[]
+
+include::_include/hu/hu-asm-mirroring.adoc[]
+
+== Known issues
+
+There are no known issues for the FC host configuration for Rocky Linux 9.4 with ONTAP release.
+
